adicionando archetypo, atualizando swagger e create resources
