# backend/src/router/v1Router.ts
@@ -2,6 +2,7 @@ import { Router } from "express";
 
 import userRouter from "../resources/user/user.router";
 import characterRouter from "../resources/character/character.router";
+import archetypeRouter from "../resources/archetype/archetype.routes";
 
 const router = Router();
 
@@ -14,5 +15,11 @@ router.use(
     "/characters",
     // #swagger.tags = ['Characters']
     characterRouter);
+
+router.use(
+    "/archetypes",
+    // #swagger.tags = ['Archetypes']
+    archetypeRouter);
+
 
 export default router;
